--- a/recipes/degg.html
+++ b/recipes/degg.html
@@ -9,6 +9,7 @@
     <a href="../index.html">Home</a>
     <h1>Deviled Eggs</h1>
     <img src="https://www.allrecipes.com/thmb/i9XFOLA3_Cbm8BOdH7KDY6zFyIs=/771x514/filters:no_upscale():max_bytes(150000):strip_icc():focal(1019x505:1021x507):format(webp)/9085093-the-perfect-deviled-eggs-photo-by-allrecipes-2000-fa9cc50c70fb46d1921541542e8b7fd3.jpg">
-    
+    <h2>Description</h2>
+    <p>These Mediterranean deviled eggs use Greek yogurt, feta, olives, and fresh dill to deliver flavors reminiscent of the regions around the world's largest inland sea.</p>
 </body>
 </html>
