--- a/recipes/soup.html
+++ b/recipes/soup.html
@@ -9,6 +9,7 @@
     <a href="../index.html">Home</a>
     <h1>Finnish Summer Soup</h1>
     <img src="https://www.allrecipes.com/thmb/AGYb1654455B-TwW099HtOz_cy4=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/14133_FinnishSummerSoup-MFS_MFS-WD-3x2-1-2000-06aeabeef52f465b832194795d919f69.jpg">
-    
+    <h2>Description</h2>
+    <p>his Finnish summer soup should be made with fresh vegetables. Serve it with a bread and cheese platter as they do in Finland. If you can't get fresh shelled green peas, use frozen tiny green peas in this recipe.</p>
 </body>
 </html>
