--- a/recipes/degg.html
+++ b/recipes/degg.html
@@ -11,5 +11,16 @@
     <img src="https://www.allrecipes.com/thmb/i9XFOLA3_Cbm8BOdH7KDY6zFyIs=/771x514/filters:no_upscale():max_bytes(150000):strip_icc():focal(1019x505:1021x507):format(webp)/9085093-the-perfect-deviled-eggs-photo-by-allrecipes-2000-fa9cc50c70fb46d1921541542e8b7fd3.jpg">
     <h2>Description</h2>
     <p>These Mediterranean deviled eggs use Greek yogurt, feta, olives, and fresh dill to deliver flavors reminiscent of the regions around the world's largest inland sea.</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>6 large hard boiled eggs, peeled</li>
+        <li>1/4 cup Greek yogurt</li>
+        <li>1 teaspoon white vinegar</li>
+    </ul>
+    <ol>
+        <li>Slice eggs in half lengthwise and remove yolks; set whites aside.</li>
+        <li>Mash yolks with a fork in a small bowl. Stir in Greek yogurt, vinegar, dill, feta, olives, olive brine, and garlic powder; mix well.</li>
+        <li>Spoon or pipe egg yolk mixture into egg whites. Sprinkle with smoked paprika. Refrigerate eggs until serving.</li>
+    </ol>
 </body>
 </html>
