Add soup recipe

--- a/recipes/soup.html
+++ b/recipes/soup.html
@@ -11,5 +11,16 @@
     <img src="https://www.allrecipes.com/thmb/AGYb1654455B-TwW099HtOz_cy4=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/14133_FinnishSummerSoup-MFS_MFS-WD-3x2-1-2000-06aeabeef52f465b832194795d919f69.jpg">
     <h2>Description</h2>
     <p>his Finnish summer soup should be made with fresh vegetables. Serve it with a bread and cheese platter as they do in Finland. If you can't get fresh shelled green peas, use frozen tiny green peas in this recipe.</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>2 cups water</li>
+        <li>6 cups chopped (cut into 3-inch lengths) green onions</li>
+        <li>5 small potatoes, peeled and havled</li>
+    </ul>
+    <ol>
+        <li>Bring water to a boil in a large pot. Add potatoes. Reduce heat; simmer until potatoes are tender, 15 to 20 minutes.</li>
+        <li>Add onions, green beans, carrots, butter, salt, and black pepper to the pot; simmer until tender, then add peas.</li>
+        <li>Combine half-and-half and flour in a medium bowl until smooth; stir into simmering vegetables. Cook, stirring constantly, until soup is slightly thickened.</li>
+    </ol>
 </body>
 </html>
