--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -11,5 +11,17 @@
     <img src="https://www.allrecipes.com/thmb/MkKfYU4oim55CLp39DDuNMuyThA=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/23600-worlds-best-lasagna-armag-4x3-1-b24f9ad518d74090bf197828492c64a6.jpg">
     <h2>Description</h2>
     <p>This lasagna recipe takes a little work, but it is so satisfying and filling that it's worth it!</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>Meat</li>
+        <li>Onion and garlic</li>
+        <li>Sugar</li>
+    </ul>
+    <h2>Recipe</h2>
+    <ol>
+        <li>Make the meat sauce</li>
+        <li>Cook the noodles.</li>
+        <li>Make the ricotta mixture.</li>
+    </ol>
 </body>
 </html>
