Add Recipe heading which was missing in lasagna and soup

--- a/recipes/degg.html
+++ b/recipes/degg.html
@@ -17,6 +17,7 @@
         <li>1/4 cup Greek yogurt</li>
         <li>1 teaspoon white vinegar</li>
     </ul>
+    <h2>Recipe</h2>
     <ol>
         <li>Slice eggs in half lengthwise and remove yolks; set whites aside.</li>
         <li>Mash yolks with a fork in a small bowl. Stir in Greek yogurt, vinegar, dill, feta, olives, olive brine, and garlic powder; mix well.</li>
