--- a/recipes/soup.html
+++ b/recipes/soup.html
@@ -17,6 +17,7 @@
         <li>6 cups chopped (cut into 3-inch lengths) green onions</li>
         <li>5 small potatoes, peeled and havled</li>
     </ul>
+    <h2>Recipe</h2>
     <ol>
         <li>Bring water to a boil in a large pot. Add potatoes. Reduce heat; simmer until potatoes are tender, 15 to 20 minutes.</li>
         <li>Add onions, green beans, carrots, butter, salt, and black pepper to the pot; simmer until tender, then add peas.</li>
